new/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> NUMBER
Rule 2     color -> QUOT WRD QUOT
Rule 3     x-coor -> NUMBER
Rule 4     y-coor -> NUMBER
Rule 5     radius -> NUMBER
Rule 6     expression -> CANVAS color expression expression
Rule 7     expression -> LINE x-coor y-coor x-coor y-coor
Rule 8     expression -> CIRCLE x-coor y-coor radius
Rule 9     expression -> OVAL x-coor y-coor x-coor y-coor
Rule 10    expression -> RECT x-coor y-coor x-coor y-coor
Rule 11    expression -> TEXT x-coor y-coor WRD
Rule 12    expression -> IMG expression expression expression expression

Terminals, with rules where they appear

CANVAS               : 6
CIRCLE               : 8
IMG                  : 12
LINE                 : 7
NUMBER               : 1 3 4 5
OVAL                 : 9
QUOT                 : 2 2
RECT                 : 10
TEXT                 : 11
WRD                  : 2 11
error                : 

Nonterminals, with rules where they appear

color                : 6
expression           : 6 6 12 12 12 12 0
radius               : 8
x-coor               : 7 7 8 9 9 10 10 11
y-coor               : 7 7 8 9 9 10 10 11

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . NUMBER
    (6) expression -> . CANVAS color expression expression
    (7) expression -> . LINE x-coor y-coor x-coor y-coor
    (8) expression -> . CIRCLE x-coor y-coor radius
    (9) expression -> . OVAL x-coor y-coor x-coor y-coor
    (10) expression -> . RECT x-coor y-coor x-coor y-coor
    (11) expression -> . TEXT x-coor y-coor WRD
    (12) expression -> . IMG expression expression expression expression

    NUMBER          shift and go to state 2
    CANVAS          shift and go to state 3
    LINE            shift and go to state 4
    CIRCLE          shift and go to state 5
    OVAL            shift and go to state 6
    RECT            shift and go to state 7
    TEXT            shift and go to state 8
    IMG             shift and go to state 9

    expression                     shift and go to state 1

state 1

    (0) S' -> expression .



state 2

    (1) expression -> NUMBER .

    $end            reduce using rule 1 (expression -> NUMBER .)
    NUMBER          reduce using rule 1 (expression -> NUMBER .)
    CANVAS          reduce using rule 1 (expression -> NUMBER .)
    LINE            reduce using rule 1 (expression -> NUMBER .)
    CIRCLE          reduce using rule 1 (expression -> NUMBER .)
    OVAL            reduce using rule 1 (expression -> NUMBER .)
    RECT            reduce using rule 1 (expression -> NUMBER .)
    TEXT            reduce using rule 1 (expression -> NUMBER .)
    IMG             reduce using rule 1 (expression -> NUMBER .)


state 3

    (6) expression -> CANVAS . color expression expression
    (2) color -> . QUOT WRD QUOT

    QUOT            shift and go to state 11

    color                          shift and go to state 10

state 4

    (7) expression -> LINE . x-coor y-coor x-coor y-coor
    (3) x-coor -> . NUMBER

    NUMBER          shift and go to state 13

    x-coor                         shift and go to state 12

state 5

    (8) expression -> CIRCLE . x-coor y-coor radius
    (3) x-coor -> . NUMBER

    NUMBER          shift and go to state 13

    x-coor                         shift and go to state 14

state 6

    (9) expression -> OVAL . x-coor y-coor x-coor y-coor
    (3) x-coor -> . NUMBER

    NUMBER          shift and go to state 13

    x-coor                         shift and go to state 15

state 7

    (10) expression -> RECT . x-coor y-coor x-coor y-coor
    (3) x-coor -> . NUMBER

    NUMBER          shift and go to state 13

    x-coor                         shift and go to state 16

state 8

    (11) expression -> TEXT . x-coor y-coor WRD
    (3) x-coor -> . NUMBER

    NUMBER          shift and go to state 13

    x-coor                         shift and go to state 17

state 9

    (12) expression -> IMG . expression expression expression expression
    (1) expression -> . NUMBER
    (6) expression -> . CANVAS color expression expression
    (7) expression -> . LINE x-coor y-coor x-coor y-coor
    (8) expression -> . CIRCLE x-coor y-coor radius
    (9) expression -> . OVAL x-coor y-coor x-coor y-coor
    (10) expression -> . RECT x-coor y-coor x-coor y-coor
    (11) expression -> . TEXT x-coor y-coor WRD
    (12) expression -> . IMG expression expression expression expression

    NUMBER          shift and go to state 2
    CANVAS          shift and go to state 3
    LINE            shift and go to state 4
    CIRCLE          shift and go to state 5
    OVAL            shift and go to state 6
    RECT            shift and go to state 7
    TEXT            shift and go to state 8
    IMG             shift and go to state 9

    expression                     shift and go to state 18

state 10

    (6) expression -> CANVAS color . expression expression
    (1) expression -> . NUMBER
    (6) expression -> . CANVAS color expression expression
    (7) expression -> . LINE x-coor y-coor x-coor y-coor
    (8) expression -> . CIRCLE x-coor y-coor radius
    (9) expression -> . OVAL x-coor y-coor x-coor y-coor
    (10) expression -> . RECT x-coor y-coor x-coor y-coor
    (11) expression -> . TEXT x-coor y-coor WRD
    (12) expression -> . IMG expression expression expression expression

    NUMBER          shift and go to state 2
    CANVAS          shift and go to state 3
    LINE            shift and go to state 4
    CIRCLE          shift and go to state 5
    OVAL            shift and go to state 6
    RECT            shift and go to state 7
    TEXT            shift and go to state 8
    IMG             shift and go to state 9

    expression                     shift and go to state 19

state 11

    (2) color -> QUOT . WRD QUOT

    WRD             shift and go to state 20


state 12

    (7) expression -> LINE x-coor . y-coor x-coor y-coor
    (4) y-coor -> . NUMBER

    NUMBER          shift and go to state 22

    y-coor                         shift and go to state 21

state 13

    (3) x-coor -> NUMBER .

    NUMBER          reduce using rule 3 (x-coor -> NUMBER .)


state 14

    (8) expression -> CIRCLE x-coor . y-coor radius
    (4) y-coor -> . NUMBER

    NUMBER          shift and go to state 22

    y-coor                         shift and go to state 23

state 15

    (9) expression -> OVAL x-coor . y-coor x-coor y-coor
    (4) y-coor -> . NUMBER

    NUMBER          shift and go to state 22

    y-coor                         shift and go to state 24

state 16

    (10) expression -> RECT x-coor . y-coor x-coor y-coor
    (4) y-coor -> . NUMBER

    NUMBER          shift and go to state 22

    y-coor                         shift and go to state 25

state 17

    (11) expression -> TEXT x-coor . y-coor WRD
    (4) y-coor -> . NUMBER

    NUMBER          shift and go to state 22

    y-coor                         shift and go to state 26

state 18

    (12) expression -> IMG expression . expression expression expression
    (1) expression -> . NUMBER
    (6) expression -> . CANVAS color expression expression
    (7) expression -> . LINE x-coor y-coor x-coor y-coor
    (8) expression -> . CIRCLE x-coor y-coor radius
    (9) expression -> . OVAL x-coor y-coor x-coor y-coor
    (10) expression -> . RECT x-coor y-coor x-coor y-coor
    (11) expression -> . TEXT x-coor y-coor WRD
    (12) expression -> . IMG expression expression expression expression

    NUMBER          shift and go to state 2
    CANVAS          shift and go to state 3
    LINE            shift and go to state 4
    CIRCLE          shift and go to state 5
    OVAL            shift and go to state 6
    RECT            shift and go to state 7
    TEXT            shift and go to state 8
    IMG             shift and go to state 9

    expression                     shift and go to state 27

state 19

    (6) expression -> CANVAS color expression . expression
    (1) expression -> . NUMBER
    (6) expression -> . CANVAS color expression expression
    (7) expression -> . LINE x-coor y-coor x-coor y-coor
    (8) expression -> . CIRCLE x-coor y-coor radius
    (9) expression -> . OVAL x-coor y-coor x-coor y-coor
    (10) expression -> . RECT x-coor y-coor x-coor y-coor
    (11) expression -> . TEXT x-coor y-coor WRD
    (12) expression -> . IMG expression expression expression expression

    NUMBER          shift and go to state 2
    CANVAS          shift and go to state 3
    LINE            shift and go to state 4
    CIRCLE          shift and go to state 5
    OVAL            shift and go to state 6
    RECT            shift and go to state 7
    TEXT            shift and go to state 8
    IMG             shift and go to state 9

    expression                     shift and go to state 28

state 20

    (2) color -> QUOT WRD . QUOT

    QUOT            shift and go to state 29


state 21

    (7) expression -> LINE x-coor y-coor . x-coor y-coor
    (3) x-coor -> . NUMBER

    NUMBER          shift and go to state 13

    x-coor                         shift and go to state 30

state 22

    (4) y-coor -> NUMBER .

    NUMBER          reduce using rule 4 (y-coor -> NUMBER .)
    WRD             reduce using rule 4 (y-coor -> NUMBER .)
    $end            reduce using rule 4 (y-coor -> NUMBER .)
    CANVAS          reduce using rule 4 (y-coor -> NUMBER .)
    LINE            reduce using rule 4 (y-coor -> NUMBER .)
    CIRCLE          reduce using rule 4 (y-coor -> NUMBER .)
    OVAL            reduce using rule 4 (y-coor -> NUMBER .)
    RECT            reduce using rule 4 (y-coor -> NUMBER .)
    TEXT            reduce using rule 4 (y-coor -> NUMBER .)
    IMG             reduce using rule 4 (y-coor -> NUMBER .)


state 23

    (8) expression -> CIRCLE x-coor y-coor . radius
    (5) radius -> . NUMBER

    NUMBER          shift and go to state 32

    radius                         shift and go to state 31

state 24

    (9) expression -> OVAL x-coor y-coor . x-coor y-coor
    (3) x-coor -> . NUMBER

    NUMBER          shift and go to state 13

    x-coor                         shift and go to state 33

state 25

    (10) expression -> RECT x-coor y-coor . x-coor y-coor
    (3) x-coor -> . NUMBER

    NUMBER          shift and go to state 13

    x-coor                         shift and go to state 34

state 26

    (11) expression -> TEXT x-coor y-coor . WRD

    WRD             shift and go to state 35


state 27

    (12) expression -> IMG expression expression . expression expression
    (1) expression -> . NUMBER
    (6) expression -> . CANVAS color expression expression
    (7) expression -> . LINE x-coor y-coor x-coor y-coor
    (8) expression -> . CIRCLE x-coor y-coor radius
    (9) expression -> . OVAL x-coor y-coor x-coor y-coor
    (10) expression -> . RECT x-coor y-coor x-coor y-coor
    (11) expression -> . TEXT x-coor y-coor WRD
    (12) expression -> . IMG expression expression expression expression

    NUMBER          shift and go to state 2
    CANVAS          shift and go to state 3
    LINE            shift and go to state 4
    CIRCLE          shift and go to state 5
    OVAL            shift and go to state 6
    RECT            shift and go to state 7
    TEXT            shift and go to state 8
    IMG             shift and go to state 9

    expression                     shift and go to state 36

state 28

    (6) expression -> CANVAS color expression expression .

    $end            reduce using rule 6 (expression -> CANVAS color expression expression .)
    NUMBER          reduce using rule 6 (expression -> CANVAS color expression expression .)
    CANVAS          reduce using rule 6 (expression -> CANVAS color expression expression .)
    LINE            reduce using rule 6 (expression -> CANVAS color expression expression .)
    CIRCLE          reduce using rule 6 (expression -> CANVAS color expression expression .)
    OVAL            reduce using rule 6 (expression -> CANVAS color expression expression .)
    RECT            reduce using rule 6 (expression -> CANVAS color expression expression .)
    TEXT            reduce using rule 6 (expression -> CANVAS color expression expression .)
    IMG             reduce using rule 6 (expression -> CANVAS color expression expression .)


state 29

    (2) color -> QUOT WRD QUOT .

    NUMBER          reduce using rule 2 (color -> QUOT WRD QUOT .)
    CANVAS          reduce using rule 2 (color -> QUOT WRD QUOT .)
    LINE            reduce using rule 2 (color -> QUOT WRD QUOT .)
    CIRCLE          reduce using rule 2 (color -> QUOT WRD QUOT .)
    OVAL            reduce using rule 2 (color -> QUOT WRD QUOT .)
    RECT            reduce using rule 2 (color -> QUOT WRD QUOT .)
    TEXT            reduce using rule 2 (color -> QUOT WRD QUOT .)
    IMG             reduce using rule 2 (color -> QUOT WRD QUOT .)


state 30

    (7) expression -> LINE x-coor y-coor x-coor . y-coor
    (4) y-coor -> . NUMBER

    NUMBER          shift and go to state 22

    y-coor                         shift and go to state 37

state 31

    (8) expression -> CIRCLE x-coor y-coor radius .

    $end            reduce using rule 8 (expression -> CIRCLE x-coor y-coor radius .)
    NUMBER          reduce using rule 8 (expression -> CIRCLE x-coor y-coor radius .)
    CANVAS          reduce using rule 8 (expression -> CIRCLE x-coor y-coor radius .)
    LINE            reduce using rule 8 (expression -> CIRCLE x-coor y-coor radius .)
    CIRCLE          reduce using rule 8 (expression -> CIRCLE x-coor y-coor radius .)
    OVAL            reduce using rule 8 (expression -> CIRCLE x-coor y-coor radius .)
    RECT            reduce using rule 8 (expression -> CIRCLE x-coor y-coor radius .)
    TEXT            reduce using rule 8 (expression -> CIRCLE x-coor y-coor radius .)
    IMG             reduce using rule 8 (expression -> CIRCLE x-coor y-coor radius .)


state 32

    (5) radius -> NUMBER .

    $end            reduce using rule 5 (radius -> NUMBER .)
    NUMBER          reduce using rule 5 (radius -> NUMBER .)
    CANVAS          reduce using rule 5 (radius -> NUMBER .)
    LINE            reduce using rule 5 (radius -> NUMBER .)
    CIRCLE          reduce using rule 5 (radius -> NUMBER .)
    OVAL            reduce using rule 5 (radius -> NUMBER .)
    RECT            reduce using rule 5 (radius -> NUMBER .)
    TEXT            reduce using rule 5 (radius -> NUMBER .)
    IMG             reduce using rule 5 (radius -> NUMBER .)


state 33

    (9) expression -> OVAL x-coor y-coor x-coor . y-coor
    (4) y-coor -> . NUMBER

    NUMBER          shift and go to state 22

    y-coor                         shift and go to state 38

state 34

    (10) expression -> RECT x-coor y-coor x-coor . y-coor
    (4) y-coor -> . NUMBER

    NUMBER          shift and go to state 22

    y-coor                         shift and go to state 39

state 35

    (11) expression -> TEXT x-coor y-coor WRD .

    $end            reduce using rule 11 (expression -> TEXT x-coor y-coor WRD .)
    NUMBER          reduce using rule 11 (expression -> TEXT x-coor y-coor WRD .)
    CANVAS          reduce using rule 11 (expression -> TEXT x-coor y-coor WRD .)
    LINE            reduce using rule 11 (expression -> TEXT x-coor y-coor WRD .)
    CIRCLE          reduce using rule 11 (expression -> TEXT x-coor y-coor WRD .)
    OVAL            reduce using rule 11 (expression -> TEXT x-coor y-coor WRD .)
    RECT            reduce using rule 11 (expression -> TEXT x-coor y-coor WRD .)
    TEXT            reduce using rule 11 (expression -> TEXT x-coor y-coor WRD .)
    IMG             reduce using rule 11 (expression -> TEXT x-coor y-coor WRD .)


state 36

    (12) expression -> IMG expression expression expression . expression
    (1) expression -> . NUMBER
    (6) expression -> . CANVAS color expression expression
    (7) expression -> . LINE x-coor y-coor x-coor y-coor
    (8) expression -> . CIRCLE x-coor y-coor radius
    (9) expression -> . OVAL x-coor y-coor x-coor y-coor
    (10) expression -> . RECT x-coor y-coor x-coor y-coor
    (11) expression -> . TEXT x-coor y-coor WRD
    (12) expression -> . IMG expression expression expression expression

    NUMBER          shift and go to state 2
    CANVAS          shift and go to state 3
    LINE            shift and go to state 4
    CIRCLE          shift and go to state 5
    OVAL            shift and go to state 6
    RECT            shift and go to state 7
    TEXT            shift and go to state 8
    IMG             shift and go to state 9

    expression                     shift and go to state 40

state 37

    (7) expression -> LINE x-coor y-coor x-coor y-coor .

    $end            reduce using rule 7 (expression -> LINE x-coor y-coor x-coor y-coor .)
    NUMBER          reduce using rule 7 (expression -> LINE x-coor y-coor x-coor y-coor .)
    CANVAS          reduce using rule 7 (expression -> LINE x-coor y-coor x-coor y-coor .)
    LINE            reduce using rule 7 (expression -> LINE x-coor y-coor x-coor y-coor .)
    CIRCLE          reduce using rule 7 (expression -> LINE x-coor y-coor x-coor y-coor .)
    OVAL            reduce using rule 7 (expression -> LINE x-coor y-coor x-coor y-coor .)
    RECT            reduce using rule 7 (expression -> LINE x-coor y-coor x-coor y-coor .)
    TEXT            reduce using rule 7 (expression -> LINE x-coor y-coor x-coor y-coor .)
    IMG             reduce using rule 7 (expression -> LINE x-coor y-coor x-coor y-coor .)


state 38

    (9) expression -> OVAL x-coor y-coor x-coor y-coor .

    $end            reduce using rule 9 (expression -> OVAL x-coor y-coor x-coor y-coor .)
    NUMBER          reduce using rule 9 (expression -> OVAL x-coor y-coor x-coor y-coor .)
    CANVAS          reduce using rule 9 (expression -> OVAL x-coor y-coor x-coor y-coor .)
    LINE            reduce using rule 9 (expression -> OVAL x-coor y-coor x-coor y-coor .)
    CIRCLE          reduce using rule 9 (expression -> OVAL x-coor y-coor x-coor y-coor .)
    OVAL            reduce using rule 9 (expression -> OVAL x-coor y-coor x-coor y-coor .)
    RECT            reduce using rule 9 (expression -> OVAL x-coor y-coor x-coor y-coor .)
    TEXT            reduce using rule 9 (expression -> OVAL x-coor y-coor x-coor y-coor .)
    IMG             reduce using rule 9 (expression -> OVAL x-coor y-coor x-coor y-coor .)


state 39

    (10) expression -> RECT x-coor y-coor x-coor y-coor .

    $end            reduce using rule 10 (expression -> RECT x-coor y-coor x-coor y-coor .)
    NUMBER          reduce using rule 10 (expression -> RECT x-coor y-coor x-coor y-coor .)
    CANVAS          reduce using rule 10 (expression -> RECT x-coor y-coor x-coor y-coor .)
    LINE            reduce using rule 10 (expression -> RECT x-coor y-coor x-coor y-coor .)
    CIRCLE          reduce using rule 10 (expression -> RECT x-coor y-coor x-coor y-coor .)
    OVAL            reduce using rule 10 (expression -> RECT x-coor y-coor x-coor y-coor .)
    RECT            reduce using rule 10 (expression -> RECT x-coor y-coor x-coor y-coor .)
    TEXT            reduce using rule 10 (expression -> RECT x-coor y-coor x-coor y-coor .)
    IMG             reduce using rule 10 (expression -> RECT x-coor y-coor x-coor y-coor .)


state 40

    (12) expression -> IMG expression expression expression expression .

    $end            reduce using rule 12 (expression -> IMG expression expression expression expression .)
    NUMBER          reduce using rule 12 (expression -> IMG expression expression expression expression .)
    CANVAS          reduce using rule 12 (expression -> IMG expression expression expression expression .)
    LINE            reduce using rule 12 (expression -> IMG expression expression expression expression .)
    CIRCLE          reduce using rule 12 (expression -> IMG expression expression expression expression .)
    OVAL            reduce using rule 12 (expression -> IMG expression expression expression expression .)
    RECT            reduce using rule 12 (expression -> IMG expression expression expression expression .)
    TEXT            reduce using rule 12 (expression -> IMG expression expression expression expression .)
    IMG             reduce using rule 12 (expression -> IMG expression expression expression expression .)

